# TTC_Analysis_streamlit

./: LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
data/: TTC Subway Delay Data since 2025.csv  agency.txt  calendar.txt  calendar_dates.txt  code-descriptions.json  routes.txt  shapes.txt  stop_times.txt  stops.txt  ttc-streetcar-delay-data-2024.xlsx
data/cache/: openmeteo_43p653_m79p383_2024_01.parquet  openmeteo_43p653_m79p383_2024_02.parquet  openmeteo_43p653_m79p383_2024_03.parquet  openmeteo_43p653_m79p383_2024_04.parquet  openmeteo_43p653_m79p383_2024_05.parquet  openmeteo_43p653_m79p383_2024_06.parquet  openmeteo_43p653_m79p383_2024_07.parquet  openmeteo_43p653_m79p383_2024_08.parquet  openmeteo_43p653_m79p383_2024_09.parquet  openmeteo_43p653_m79p383_2024_10.parquet  openmeteo_43p653_m79p383_2024_11.parquet  openmeteo_43p653_m79p383_2024_12.parquet  openmeteo_43p653_m79p383_2025_01.parquet  openmeteo_43p653_m79p383_2025_02.parquet  openmeteo_43p653_m79p383_2025_03.parquet  openmeteo_43p653_m79p383_2025_04.parquet  openmeteo_43p653_m79p383_2025_05.parquet  openmeteo_43p653_m79p383_2025_06.parquet  openmeteo_43p653_m79p383_2025_07.parquet  openmeteo_43p653_m79p383_2025_08.parquet  openmeteo_43p653_m79p383_2025_09.parquet  openmeteo_43p653_m79p383_2025_10.parquet
ttc_analysis/: __init__.py  correlation.py  dashboard.py  delay_features.py  delay_ingestion.py  features.py  ingestion.py  run_analysis.py  viz_delay_map.py  viz_map.py  weather_api.py
ttc_analysis/api/: __init__.py  app.py
ttc_analysis/api/routes/: network.py  qa.py
